# E-Commerce-Backend

./: AuthMicroservice.drawio  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
e_commerce/: app.sh  connections.py  database.py  exceptions.py  logger.py  main.py  settings.py
e_commerce/admin/: auth.py  views.py
e_commerce/cache/: cache.py  cacheService.py
e_commerce/decorators/: repositoriesDecorator.py
e_commerce/dependencies/: auth.py  cache.py  email.py  goods.py  logger.py  users.py
e_commerce/migrations/: env.py
e_commerce/migrations/versions/: 46d77571dc55_add_users_table.py  62ab8d605304_add_table_users.py  af9d3439adb7_add_users_table.py  cb486369e204_add_goods_table.py  f52d2d2a39bb_add_box_table.py
e_commerce/models/: boxesModel.py  goodsModel.py  usersInfoModel.py  usersModel.py
e_commerce/repositories/: baseRepository.py  boxesRepository.py  goodsRepository.py  mixinRepository.py  usersInfoRepository.py  usersRepository.py
e_commerce/routers/: authRouter.py  boxesRouter.py  goodsRouter.py  imagesRouter.py  pagesRouter.py  userInfoRouter.py  usersRouter.py
e_commerce/schemas/: boxesSchemas.py  goodsSchemas.py  usersInfoSchemas.py  usersSchemas.py
e_commerce/tasks/: tasks.py
e_commerce/templates/: goods.html  register.html  user.html  user_box.html
scripts/: create_db.sh  stop_db.sh
tests/: conftest.py
tests/unit_tests/: usersRepository_test.py
